--- a/client/src/index.css
+++ b/client/src/index.css
@@ -119,3 +119,10 @@
   color: white;
   padding: 20px 0px;
 }
+
+/* product link  */
+
+.product-link{
+  text-decoration: none !important ;
+  color: black;
+}
